@@ -37,6 +37,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #8275: Fix passing of callback arguments with ctypes under Win64.
+  Patch by Stan Mihai.
+
 - Issue #10940: Workaround an IDLE hang on Mac OS X 10.6 when using the
   menu accelerators for Open Module, Go to Line, and New Indent Width.
   The accelerators still work but no longer appear in the menu items.
